fixed that weird gap that shows when the chat area is scrolled all the way to the top

--- a/app/assets/stylesheets/_chat_area.sass
+++ b/app/assets/stylesheets/_chat_area.sass
@@ -199,3 +199,4 @@ html body #app_body .main-area #head-mask
 .channels-pane
   overflow-y: auto
   margin-right: -15px
+  margin-top: -13px
